@@ -1,4 +1,5 @@
 current:
+  * tweak Codabar bar/space ratio validation
   * finish Codabar support for python, perl, java and iPhone interfaces
     - reduce Codabar uncertainty to minimum
   * add core support for Codabar symbology
